--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "ts-loader": "^9.5.1"
   }
